@@ -1,3 +1,9 @@
+2006-02-08  Luc Verhaegen <libv@skynet.be>
+
+	* src/imstt_driver.c: (IMSTTPreInit):
+
+	Remove idiotic usage of pScrn->clock, useless anyway.
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
